--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8"/>
-    <title>Unicum HTML Template</title>
+    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/static/home/css/libs/animate.min.css" type="text/css" media="all">
     <link href="/static/home/css/libs/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
