--- a/templates/dashboard/user.html
+++ b/templates/dashboard/user.html
@@ -90,7 +90,12 @@
       });
     });
     </script>
-<div class="col-lg-12">
+              <div class="col-lg-12 col-md-12">
+                <div class="widget">
+                  <div class="widget-header">
+                    <div class="title">
+                      Payout History
+                    </div>
 <div class="bs-example table-responsive">
 <table class="table table-striped table-hover tablesorter tablesorter-default" id="blockTable" role="grid">
 <thead>
